<resources>
    <string name="app_name">Cashier POS</string>

    <!-- Category Related -->
    <string name="upload_image">Upload Image</string>
    <string name="category_image">Category Image</string>
    <string name="category_image_preview">Image Preview</string>
    <string name="category_id">Category ID</string>
    <string name="category_name">Category Name</string>
    <string name="translated_category_name">የምድብ ስም</string>
    <string name="category_id_label">%1$d</string>
    <string name="image_name_label">%1$s</string>
    <string name="add_category">Add Category</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- Food Related -->
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_category">Food Category</string>
    <string name="food_price">Food Price</string>
    <string name="food_id">Food ID</string>
    <string name="food_id_description">Food ID</string>
    <string name="food_name_description">Food Name</string>
    <string name="category_name_description">Category Name</string>
    <string name="food_price_description">Food Price</string>
    <string name="food_id_format">%d</string>
    <string name="food_name_format">Name: %s</string>
    <string name="item_format">%s</string>
    <string name="food_category_format">Category: %s</string>
    <string name="food_price_format">Price: %.2f ETB</string>
    <string name="food_quantity">%1$d</string>
    <string name="price_format">%1$.2f ብር</string>
    <string name="quantity_format">%1$d</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="delete_all">ሁሉንም አጥፋ</string>

    <!-- Waiter Related -->
    <string name="add_waiter">Add Waiter</string>
    <string name="waiter_name">የአስተናጋጅ ስም</string>
    <string name="hire_date">Hire Date</string>
    <string name="waiter_id_description">Waiter ID</string>
    <string name="waiter_id">Waiter ID</string>
    <string name="waiter_name_description">Waiter Name</string>
    <string name="hire_date_description">Hire Date</string>
    <string name="waiter_id_format">%d</string>
    <string name="waiter_name_format">Name: %s</string>
    <string name="hire_date_format">Date: %1$s</string>

    <!-- Authority Related -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="client">Client</string>
    <string name="login">Login</string>
    <string name="register_link">Don\'t have an account? Register</string>
    <string name="select_user_type">Select User Type</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="content_description">Toggle Password Visibility</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Registered? Login</string>
    <string name="register_button">Register</string>

    <!-- Admin Related -->
    <string name="admin_dashboard_massage">Welcome to Admin Dashboard</string>
    <string name="manage_categories">የምግብ ምድብ ማስተዳደሪያ</string>
    <string name="manage_foods">ምግብ ማስተዳደሪያ</string>
    <string name="manage_waiters">አስተናጋጅ ማስተዳደሪያ</string>
    <string name="completed_orders">ያለቁ ትዕዛዞች ማስተዳደሪያ</string>
    <string name="logout">Logout</string>

    <!-- Main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="image_description">App Logo</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="update_profile">Update Profile</string>
    <string name="refresh">Refresh</string>

    <!-- Fragments -->
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_food_list">Food List</string>
    <string name="title_orders">Orders</string>
    <string name="title_cart">Cart</string>
    <string name="title_bills">Bill</string>
    <string name="title_bill">Bills</string>
    <string name="title_profile">Profile</string>
    <string name="title_user">Users</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Cart Related -->
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="total_price">ድምር: </string>
    <string name="total_price_format">Total Price: %.2f ብር</string>
    <string name="select_waiter">Select Waiter</string>
    <string name="table_number">Table Number</string>
    <string name="enter_table_number">Enter Table Number</string>
    <string name="send_order">ትዕዛዙን ላክ</string>
    <string name="quantity">Quantity</string>
    <string name="times">X</string>

    <!-- Order Related -->
    <string name="order_id">Order: %d</string>
    <string name="order_waiter_name">Waiter: %1$s</string>
    <string name="order_table_number">Table: %1$s</string>
    <string name="order_total_price">Total Price: %1$.2f ብር</string>
    <string name="order_time">Order Time: %1$s</string>
    <string name="print_order">Print</string>
    <string name="cancel_order">Cancel</string>
    <string name="print_order_description">Print Order</string>
    <string name="cancel_order_description">Cancel Order</string>
    <string name="status_format">%1$s</string>
    <string name="no_items_in_order">No completed Orders</string>
    <string name="no_completed_orders_found">ምንም የተጠናቀቁ ትዕዛዞች የሉም</string>
    <string name="no_orders_found">አዲስ ትዕዛዝ የለም!</string>
    <string name="no_carts_found">ትዕዛዝ የለም!</string>
    <string name="orders">የትዕዛዞች ዝርዝር</string>
    <string name="total_completed_orders">የምግብ ሽያጭ ብዛት፡  %1$d</string>
    <string name="total_price_sum">ጠቅላላ የምግብ ሽያጭ፡  %1$.2f</string>
    <string name="selected_items">የእንጀራ ምግቦች ብዛት፡  %1$.2f</string>
    <string name="orders_summary">የሽያጭ ማጠቃለያ</string>

</resources>