<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Waiter ID TextView -->
        <TextView
            android:id="@+id/waiterIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/waiter_id_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/waiter_id"
            android:textSize="16sp" />

        <!-- waiter Name TextView -->
        <TextView
            android:id="@+id/waiterNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/waiter_name_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/waiter_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- Hire Date TextView -->
        <TextView
            android:id="@+id/hireDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/hire_date_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/hire_date"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/deleteWaiterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete" />
    </LinearLayout>
</androidx.cardview.widget.CardView>