<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <!-- Product Name -->
    <TextView
        android:id="@+id/foodName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/food_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Price -->
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/food_price_format"
        android:layout_marginEnd="16dp" />

    <!-- Decrease Button -->
    <ImageButton
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_minus_small"
        android:contentDescription="@string/minus_button" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/quantity_format"
        android:gravity="center"/>

    <!-- Increase Button -->
    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_plus_small"
        android:contentDescription="@string/plus_button" />

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        android:layout_marginStart="16dp" />
</LinearLayout>