<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lovelycafe.casheirpos.admin.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.lovelycafe.casheirpos.admin.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_bills"
        android:name="com.lovelycafe.casheirpos.admin.ui.bills.BillsFragment"
        android:label="@string/title_bills"
        tools:layout="@layout/fragment_bills" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.lovelycafe.casheirpos.admin.ui.users.UsersFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_users" />
</navigation>