<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- ImageView for Category Image -->
    <ImageView
        android:id="@+id/categoryImageView"
        android:layout_width="395dp"
        android:layout_height="230dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/category_image"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/categoryIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/category_id"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="start" />

    <!-- Name TextView -->
    <TextView
        android:id="@+id/categoryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/category_name"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start" />

    <TextView
        android:id="@+id/translatedCategoryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/translated_category_name"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_gravity="center">

        <!-- Edit Button -->
        <Button
            android:id="@+id/editCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginEnd="8dp"/>

        <!-- Delete Button -->
        <Button
            android:id="@+id/deleteCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>

    </LinearLayout>
</LinearLayout>