<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/quantity"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/quantityTimesPrice"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/times"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/price_format"
        android:textSize="14sp" />
</LinearLayout>
