<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orderCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Order Details: Waiter, Table, and Time -->
        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/waiterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_waiter_name"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <!--
        <TextView
            android:id="@+id/tableNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_table_number"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>
            -->

        <!-- Order Items: List of Items Ordered -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textSize="14sp"
                android:layout_marginEnd="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textSize="14sp"
                android:layout_marginEnd="32dp"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_quantity"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Total Price -->
        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_price"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/orderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_time"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>