<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/totalOrdersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_completed_orders"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/totalSumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_sum"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/selectedItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_items"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
