<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginTop="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Food Name TextView -->
        <TextView
            android:id="@+id/foodNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/food_name_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/food_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- Food Price TextView -->
        <TextView
            android:id="@+id/foodPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/food_price_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/food_price"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/foodMinusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_minus_small"
                android:contentDescription="@string/minus_button" />

            <!-- Quantity -->
            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"/>

            <ImageButton
                android:id="@+id/foodPlusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_plus_small"
                android:contentDescription="@string/plus_button" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>