<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Category Name Input Field -->
    <EditText
        android:id="@+id/categoryNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="280dp"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/category_name"
        android:importantForAutofill="yes"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/categoryTranslatedNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="280dp"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/translated_category_name"
        android:importantForAutofill="yes"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_gravity="center_horizontal" />

    <!-- Image Preview -->
    <ImageView
        android:id="@+id/categoryImagePreview"
        android:layout_width="359dp"
        android:layout_height="274dp"
        android:layout_gravity="center"
        android:contentDescription="@string/category_image_preview"
        android:src="@drawable/placeholder_image"
        android:scaleType="centerCrop" />

    <!-- Upload Image Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadImageButton"
        style="@style/Custom.Material3.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:text="@string/upload_image"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
